# rocketsmbd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  ROADMAP.md  SECURITY.md  rocketsmbd.toml.example
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml
bench/: bench.sh  cross-vm-read-cachenone.sh  cross-vm-read.sh  loopback-multichannel.sh  net-iperf.sh  win-interop.ps1  win-multistream.ps1  win-read.ps1
bench/krb5/: e2e.sh
bench/stress/: Containerfile  README.md  analyze-soak.sh  client.sh  run-stress.sh  soak.sh
bench/stress/results/: soak-1000-2026-06-16.csv
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONCURRENCY.md  FIPS.md  KERBEROS.md  OPLOCKS.md  SMBDIRECT.md  TESTING.md  TUNING.md  UPSTREAM.md  fedora-submission.md  rocketsmbd.8
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ntlm.rs  process_frame.rs
packaging/: build-srpm.sh  rocketsmbd.rpmlintrc  rocketsmbd.service  rocketsmbd.spec
packaging/debian/: changelog  control  copyright  rocketsmbd.install  rocketsmbd.manpages  rules
src/: config.rs  crypto.rs  crypto_openssl.rs  crypto_rustcrypto.rs  krb5.rs  lease.rs  lib.rs  log.rs  main.rs  net.rs  ntlm.rs  session.rs  spnego.rs  status.rs  uring.rs  vfs.rs  wire.rs
src/smb2/: handlers.rs  mod.rs
