[package]
name = "rocketsmbd"
version = "0.1.1"
edition = "2021"
description = "smbd replacement: io_uring end-to-end, zero-copy file-to-socket"
license = "MIT"
repository = "https://github.com/glennswest/rocketsmbd"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Pure-Rust crypto (RustCrypto) for NTLMv2 + SMB2/3 signing
md4 = "0.10"
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
cmac = "0.7"
aes = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
